@@ -1,5 +1,8 @@
 Changes
+examples/adjust_actual_page.pl
+examples/compute_index_values.pl
 examples/ex1.pl
+examples/pages_num.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
@@ -16,12 +19,20 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 Pager.pm
+Pager/Utils.pm
 README
 SIGNATURE
+t/Tags-HTML-Pager-Utils/01-use.t
+t/Tags-HTML-Pager-Utils/02-version.t
+t/Tags-HTML-Pager-Utils/03-adjust_actual_page.t
+t/Tags-HTML-Pager-Utils/04-compute_index_values.t
+t/Tags-HTML-Pager-Utils/05-pages_num.t
 t/Tags-HTML-Pager/01-use.t
 t/Tags-HTML-Pager/02-version.t
 t/Tags-HTML-Pager/03-new.t
 t/Tags-HTML-Pager/04-process.t
 t/Tags-HTML-Pager/05-process_css.t
+xt/Tags-HTML-Pager-Utils/01-pod_coverage.t
+xt/Tags-HTML-Pager-Utils/02-pod.t
 xt/Tags-HTML-Pager/01-pod_coverage.t
 xt/Tags-HTML-Pager/02-pod.t
