@@ -32,6 +32,8 @@ no_index:
 requires:
   Class::Utils: 0.02
   Error::Pure: 0.07
+  Exporter: 0
+  POSIX: 0
   Readonly: 0
   Tags::HTML: 0
   Unicode::UTF8: 0
