@@ -19,6 +19,8 @@ readme_from 'Pager.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0.02;
 requires 'Error::Pure' => 0.07;
+requires 'Exporter' => 0;
+requires 'POSIX' => 0;
 requires 'Readonly' => 0;
 requires 'Tags::HTML' => 0;
 requires 'Unicode::UTF8' => 0;
